--- a/trackingsite/home.css
+++ b/trackingsite/home.css
@@ -8,7 +8,7 @@
 	}
 
 
-[property="migraine"] {
+[property="LogEntry"] {
 	margin: .5em;
 	--hue: calc(30 * (1 - var(--intensity) * .25));
 	--color: var(--hue), 100%;
@@ -16,15 +16,15 @@
 	border-radius: 4px;
 }
 
-[property="migraine"]:target {
+[property="LogEntry"]:target {
 	box-shadow: 0 0 .5em skyblue;
 }
 
-[property="migraine"].intensity-0 {
+[property="LogEntry"].intensity-0 {
 	background: hsl(20, 100%, 90%);
 }
 
-	[property="migraine"] header {
+	[property="LogEntry"] header {
 		display: flex;
 		flex-wrap: wrap;
 		padding: .5em;
