--- a/trackingsite/home.css
+++ b/trackingsite/home.css
@@ -8,7 +8,7 @@
 	}
 
 
-[property="LogEntry"] {
+[property="migraine"] {
 	margin: .5em;
 	--hue: calc(30 * (1 - var(--intensity) * .25));
 	--color: var(--hue), 100%;
@@ -16,15 +16,15 @@
 	border-radius: 4px;
 }
 
-[property="LogEntry"]:target {
+[property="migraine"]:target {
 	box-shadow: 0 0 .5em skyblue;
 }
 
-[property="LogEntry"].intensity-0 {
+[property="migraine"].intensity-0 {
 	background: hsl(20, 100%, 90%);
 }
 
-	[property="LogEntry"] header {
+	[property="migraine"] header {
 		display: flex;
 		flex-wrap: wrap;
 		padding: .5em;
@@ -40,7 +40,7 @@
 		margin-right: .6ch;
 	}
 
-	[property="notes"] {
+	[property="Entry"] {
 		padding: .5em;
 		background: hsla(0,0%,100%,.4);
 	}
